update for background overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -746,3 +746,6 @@ hr{
 	z-index:10000;
 	display:none;
 }
+#addCardButton,.tip{
+	position:relative;
+}
